--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lob/pdffonts",
-  "version": "3.5.0",
+  "version": "3.5.1",
   "description": "Node bindings for Poppler's pdffonts CLI",
   "main": "./lib/pdffonts.js",
   "scripts": {
@@ -41,9 +41,14 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "eslint": "^4.19.1",
-    "eslint-config-lob": "^4.0.0",
+    "eslint": "^9.36.0",
+    "eslint-config-lob": "^6.0.0",
+    "form-data": "^4.0.4",
     "generate-changelog": "^1.8.0",
-    "mocha": "^6.2.2"
+    "mocha": "^11.7.2"
+  },
+  "overrides": {
+    "form-data": "^4.0.4",
+    "tough-cookie": "^4.1.3"
   }
 }
